<resources>
    <string name="app_name">Fudi</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login"></string>
    <string name="title_activity_fud_list"></string>
    <string name="title_activity_registration">Register!</string>
    <string name="title_activity_me">You :)</string>
    <string name="title_activity_fud_detail">Fud</string>
    <string name="title_activity_fud_creation">New Fud!</string>
    <string name="preference_file_key">com.fudi.fudi.LOCAL</string>
    <string name="title_activity_location_pick">Location Settings</string>
    <string name="title_activity_image_view"></string>

    <string name="no_connection">Could not connect to a network :(</string>

    <!-- LoginActivity -->
    <string name="login_register">Register!</string>
    <string name="login_just_continue">Just Continue</string>

    <!-- MainActivity -->
    <string name="fud_creation_error">"Oops! There was a problem in submitting your post."</string>
    <string name="fud_general_error">:( Something went wrong.</string>

    <!-- FudCreationActivity -->
    <string name="new_fud_take">Take</string>
    <string name="new_fud_load">Load</string>
    <string name="new_fud_res">Restaurant</string>
    <string name="new_fud_cost">Cost</string>
    <string name="new_fud_dish">Dish Name</string>
    <string name="new_fud_desc">Description</string>
    <string name="new_fud_desc_placeholder">(Optionally) Describe the dish and your experience :)</string>
    <string name="new_fud_submit">Post</string>

    <!-- Comment -->
    <string name="comment_entry_hint">How\'s the fud look?</string>
    <string name="review_comment_entry_hint">Give us the deats</string>
    <string name="comment_chooser_popup_question">Are you adding a review?</string>
    <string name="comment_popup_choose_review">Yes</string>
    <string name="comment_popup_choose_normal">No</string>

    <string name="review_comment_rating_prompt">How was it?</string>

    <string name="action_back">Back</string>
    <string name="action_location">Location</string>
    <string name="action_user">You</string>

    <!-- Popup -->
    <string name="processing_popup">Working...</string>

    <!-- Map -->
    <string name="remove_circle_yes">Yes</string>
    <string name="remove_circle_no">No</string>
    <string name="remove_circle_warning">Do you want to set your location here?</string>
    <string name="remove_circle_title">Change Area?</string>
    <string name="change_radius">Change Circle radius?</string>
    <string name="confirm_change_title">Confirm area</string>
    <string name="confirm_change_message">Satisfied with your choice?</string>


</resources>
