<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_fud_frame">

    <ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
        android:id="@+id/new_fud_scrollview"
        android:fillViewport="false">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.fudi.fudi.front.FudCreationActivity"
        android:orientation="vertical"
        android:id="@+id/new_fud_container"
        android:gravity="center_horizontal">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_fud_image_preview"
            android:scaleType="centerInside"
            android:maxHeight="250dp"
            android:adjustViewBounds="true"
            android:background="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/new_fud_flex_space" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/new_fud_pic_button_area"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/new_fud_button"
                android:id="@+id/new_fud_take_button"
                android:scaleType="fitXY"
                android:background="@null" />

            <Space
                android:layout_width="20dp"
                android:layout_height="1dp" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/upload_pic_button"
                android:id="@+id/new_fud_load_button"
                android:scaleType="fitXY"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/new_fud_main"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_fud_text_entry_area">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:id="@+id/new_fud_label_area"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/new_fud_dish"
                        android:id="@+id/new_fud_dish_label"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text_color"
                        android:textStyle="bold"
                        android:gravity="center_vertical|right" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/new_fud_res"
                        android:id="@+id/new_fud_res_label"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text_color"
                        android:textStyle="bold"
                        android:gravity="center_vertical|right" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/new_fud_cost"
                        android:id="@+id/new_fud_cost_label"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text_color"
                        android:textStyle="bold"
                        android:gravity="center_vertical|right" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/new_fud_entry">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/new_fud_dish_entry"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:inputType="textCapWords" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/new_fud_restaurant_entry"
                        android:gravity="center_vertical"
                        android:inputType="textCapWords"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/new_fud_cost_entry"
                        android:gravity="center_vertical"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/new_fud_desc_area">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/new_fud_desc"
                    android:id="@+id/new_fud_desc_label"
                    android:textSize="18sp"
                    android:textColor="@color/secondary_text_color"
                    android:textStyle="bold"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:ems="10"
                    android:id="@+id/new_fud_desc_text"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/new_fud_desc_placeholder"
                    android:textSize="18sp"
                    android:textColor="@color/secondary_text_color"
                    android:background="@drawable/standard_multiline_text_entry"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textIsSelectable="false"
                    android:gravity="top"
                    android:minHeight="120dp"
                    android:editable="true" />
            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="15dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_fud_submit"
                android:id="@+id/new_fud_submit_button"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/standard_button"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/default_text_color" />
        </LinearLayout>
    </LinearLayout>

    </ScrollView>

</FrameLayout>